# chitanda

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  config.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
chitanda/: __init__.py  __main__.py  bot.py  commands.py  config.py  database.py  util.py
chitanda/listeners/: discord.py  irc.py
chitanda/modules/: __init__.py  aliases.py  choose.py  github_relay.py  help.py  reload.py  say.py  sed.py  titles.py  urbandictionary.py  wolframalpha.py
chitanda/modules/irc_channels/: __init__.py  join.py  part.py
chitanda/modules/lastfm/: nowplaying.py  set.py  unset.py
chitanda/modules/quotes/: add.py  delete.py  fetch.py  find.py
chitanda/modules/tell/: __init__.py
snowball/: __init__.py  __main__.py  bot.py  config.py  constants.py  database.py  migrate.py  tasks.py  util.py
snowball/commands/: __init__.py  aliases.py  choose.py  github_relay.py  help.py  reload.py  say.py  sed.py  titles.py  urbandictionary.py  wolframalpha.py
snowball/commands/irc_channels/: __init__.py  join.py  part.py
snowball/commands/irc_channels/migrations/: 0001.sql
snowball/commands/lastfm/: nowplaying.py  set.py
snowball/commands/quotes/: add.py  delete.py
snowball/commands/quotes/migrations/: 0001.sql
snowball/commands/tell/: __init__.py  tell.py
snowball/commands/tell/migrations/: 0001.sql
snowball/listeners/: __init__.py  discord.py  irc.py
snowball/modules/: __init__.py  aliases.py  choose.py  help.py  reload.py  say.py  sed.py  titles.py  urbandictionary.py  wolframalpha.py
snowball/modules/irc_channels/: __init__.py  join.py  part.py
snowball/modules/lastfm/: nowplaying.py  set.py  unset.py
snowball/modules/quotes/: add.py  delete.py  fetch.py  find.py
snowball/modules/tell/: __init__.py  tell.py
tests/: sample_config.json  test_commands.py  test_config.py  test_database.py  test_util.py
