[tool.poetry]
name = "snowball"
version = "0.0.2"
description = "An IRC bot framework."
authors = ["dazzler <dazzler@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dazuling/snowball"

[tool.poetry.scripts]
snowball = 'snowball.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
huey = "^1.10"
gevent = "^1.4"
pydle = "^0.9.1"
"discord.py" = "^1.2"
click = "^7.0"
appdirs = "^1.4"
aiohttp = "^3.5"
requests = "^2.22"
ircmessage = "^0.1.1"

[tool.poetry.dev-dependencies]
poetry-setup = "^0.3.6"
isort = "^4.3"
flake8 = "^3.7"
pytest = "^5.0"
pytest-cov = "^2.7"
mock = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
