[tool.poetry]
name = "chitanda"
version = "0.0.2"
description = "An extensible Discord & IRC bot."
authors = ["dazzler <dazzler@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dazuling/chitanda"

[tool.poetry.scripts]
chitanda = 'chitanda.__main__:run'

[tool.poetry.dependencies]
python = "^3.7"
huey = "^1.10"
gevent = "^1.4"
pydle = "^0.9.1"
"discord.py" = "^1.2"
click = "^7.0"
appdirs = "^1.4"
aiohttp = "^3.5"
requests = "^2.22"

[tool.poetry.dev-dependencies]
poetry-setup = "^0.3.6"
isort = "^4.3"
flake8 = "^3.7"
pytest = "^5.0"
pytest-cov = "^2.7"
mock = "^3.0"
black = "=19.3b0"
coveralls = "^1.8"
pytest-asyncio = "^0.10.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
